--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -128,6 +128,17 @@
                         android:textColor="@color/text_secondary"
                         android:textSize="16sp" />
 
+                    <!-- Designation -->
+                    <TextView
+                        android:id="@+id/tvDesignation"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:fontFamily="sans-serif"
+                        android:text=""
+                        android:textColor="@color/text_secondary"
+                        android:textSize="16sp" />
+
                     <!-- Department -->
                     <TextView
                         android:id="@+id/tvDepartment"
